--- a/src/global.css
+++ b/src/global.css
@@ -136,3 +136,41 @@ html {
 .to-main {
   --tw-gradient-to: var(--themeMain);
 }
+
+.mouse {
+  width: 50px;
+  height: 90px;
+  border: 3px solid #333;
+  border-radius: 60px;
+  position: absolute;
+}
+
+.mouse::before {
+  content: "";
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  border-radius: 50%;
+  opacity: 1;
+  animation-direction: reverse;
+  animation: wheel 1.2s infinite;
+  -webkit-animation: wheel 1.2s infinite;
+}
+
+@keyframes wheel {
+  to {
+    opacity: 0;
+    top: 10px;
+  }
+}
+
+@-webkit-keyframes wheel {
+  to {
+    opacity: 0;
+    top: 10px;
+  }
+}
